# esp32-miltichannel-led-driver

./: .gitignore  CMakeLists.txt  Makefile  README.md  ota_server.py  partitions.csv  sdkconfig.defaults
.github/workflows/: main.yml
backend/: package.json  server.js
components/app_events/: CMakeLists.txt  app_events.c
components/app_events/include/: app_events.h
components/app_mqtt/: CMakeLists.txt  app_mqtt.c
components/app_mqtt/include/: app_mqtt.h
components/app_mqtt_discovery/: CMakeLists.txt  app_mqtt_discovery.c  app_mqtt_discovery_sensors.c
components/app_mqtt_discovery/include/: app_mqtt_discovery.h  app_mqtt_discovery_sensors.h
components/app_settings/: CMakeLists.txt  app_settings.c  component.mk
components/app_settings/include/: app_settings.h  (+1 more)
components/captive/: CMakeLists.txt  Kconfig  captive_dns.c  component.mk
components/ota/: CMakeLists.txt  Kconfig  component.mk  ota.c
frontend/: package.json  postprocess.js  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  apiService.js  authService.js  http.js  router.js  store.js  uploadFileService.js
main/: CMakeLists.txt  Kconfig.projbuild  adc.c  auth.c  buttons.c  component.mk  connect.c  fanspeed.c  led.c  light.c  main.c  mcp7940.c  monitor.c  mqtt.c  pidreg.c  pwm.c  rtc.c  server.c  settings.c  stmdriver.c  thingsboard.c  tools.c  udp_multicast.c  web_socket.c
main/include/: adc.h  auth.h  buttons.h  connect.h  fanspeed.h  led.h  light.h  main.h  mcp7940.h  monitor.h  mqtt.h  pidreg.h  pwm.h  rtc.h  server.h  settings.h  stmdriver.h  thingsboard.h  tools.h  udp_multicast.h  web_socket.h  webpage.h
(+31 files in other folders)
